ImageViewer Release Notes
Author: Steve Corbett

Version 2.2 [TODO] - Maintenance release
  #1 - Upgrade to swing-extras 2.4

Version 2.1 [2025-07-22] - Migrate to github/maven
  Upgrade to swing-extras 2.3
  Migrate project to github/maven

Version 2.0 [2023-12-31] - Ground-up rewrite with extension support
  [IMGVIEW-89] - Add "Undo last move" option
  [IMGVIEW-92] - Crop aspect ratio labels seem wrong
  [IMGVIEW-100] - Two images with same base name confuses thumb panel
  [IMGVIEW-106] - Create ExtensionManager
  [IMGVIEW-107] - Remove TempImagePanel
  [IMGVIEW-108] - Rewrite application preferences
  [IMGVIEW-109] - Name conflict dialog needs to trim the filename
  [IMGVIEW-110] - Add built-in extension for thumbnail caching
  [IMGVIEW-111] - Extension point: menu additions
  [IMGVIEW-112] - Extension point: toolbar buttons
  [IMGVIEW-113] - Extension point: global shortcuts
  [IMGVIEW-114] - Add built-in extension for image information
  [IMGVIEW-115] - Extension point: LogConsole
  [IMGVIEW-116] - Move deletion stats to built-in extension
  [IMGVIEW-117] - Add ImageOperationHandler
  [IMGVIEW-118] - Reload UI if extensions are enabled or disabled
  [IMGVIEW-119] - Extract ResizeDialog to extension
  [IMGVIEW-120] - Extract companion text file to extension
  [IMGVIEW-121] - Extension versioning and deployment
  [IMGVIEW-122] - Extract TransformDialog to extension
  [IMGVIEW-123] - Extract CropDialog/SquareCropDialog into extensions
  [IMGVIEW-124] - Bug: window size doesn't always save
  [IMGVIEW-125] - Extract QuickAccess to an extension
  [IMGVIEW-126] - Implement remaining image operations
  [IMGVIEW-127] - Image converter extension
  [IMGVIEW-128] - Make sure extensions handle key shortcuts properly
  [IMGVIEW-129] - Extract FullScreen mode to an extension
  [IMGVIEW-130] - Make ResizeDialog a little less confusing
  [IMGVIEW-131] - Need a reload button
  [IMGVIEW-132] - Add an option to preserve file date/time