@@ -2,6 +2,7 @@ ImageViewer Release Notes
 Author: Steve Corbett
 
 Version 2.2 [TODO] - Maintenance release
+  #2 - Add support for virtual directories (image sets)
   #1 - Upgrade to swing-extras 2.4
 
 Version 2.1 [2025-07-22] - Migrate to github/maven
